fix: wrong margins testimonials footer blocks

--- a/online-zoo/pages/main/style.css
+++ b/online-zoo/pages/main/style.css
@@ -583,6 +583,7 @@ a {
   background-image: url(../../assets/images/leav_foto.png);
   background-repeat: no-repeat;
   background-position: bottom -130px right;
+  height: 780px;
 }
 
 .testimonials__h3 {
@@ -740,10 +741,6 @@ footer .wrapper {
 
 .donate-footer {
   margin-top: 0;
-}
-
-footer {
-  margin-top: 180px;
 }
 
 .footer-left-column .logo {
