--- a/online-zoo/pages/sass/layout/_footer.scss
+++ b/online-zoo/pages/sass/layout/_footer.scss
@@ -7,9 +7,6 @@ footer .wrapper {
   margin-top: 0;
 }
 
-footer {
-  margin-top: 180px;
-}
 
 .footer-left-column .logo {
   margin-top: 41px;
