--- a/online-zoo/pages/sass/layout/_testimonials.scss
+++ b/online-zoo/pages/sass/layout/_testimonials.scss
@@ -2,6 +2,7 @@
   background-image: url(../../assets/images/leav_foto.png);
   background-repeat: no-repeat;
   background-position: bottom -130px  right;
+  height: 780px;
 }
 
 .testimonials__h3 {
